# vapidemo

./: .gitignore  pyproject.toml  web.py
static/: index.html
